<resources>
    <string name="app_name">Pokedex</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="label_login_hello">¡Hola!</string>
    <string name="label_login_text">Bienvenido a tu pokedex</string>
    <string name="hint_login_user">Ingresa tu usuario</string>
    <string name="hint_login_password">Ingresa tu contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="error_login_blank_user">Usuario es requerido</string>
    <string name="error_login_blank_password">Contraseña es obligatoria</string>


    <string name="message_error_connection">Connectivity problem, check your internet connection</string>
    <string name="message_error_server_connection">Server connectivity problem, try again</string>
    <string name="message_error_timeout">Tiempo de respuesta alcanzado, intente nuevamente</string>
    <string name="message_error_400">No information was found with the data entered</string>
    <string name="message_error_general">The action could not be completed</string>
    <string name="loading_text">Cargando...</string>


    <string name="button_accept">Aceptar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="close_session_message">¿Deseas cerrar sesión?</string>
    <string name="close_session_title">Atención</string>
    <string name="title_alert_error">There\'s been a problem&#8230;</string>

    <!-- Home Region -->
    <string name="pokemons_are_not_avaialables">No se encontraron pokemones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Home Region -->
    <!-- Profile Region -->
    <string name="btn_logout">Cerrar sesión</string>
    <!-- Profile Region -->
    <string name="weight">Peso:</string>
</resources>