<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.example.pokedex.viewmodels.LoginVM"/>
        <variable name="screenTitle" type="java.lang.String"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
        <include
            layout="@layout/custom_loader"
            android:id="@+id/loader"
            bind:isVisible="@{safeUnbox(viewModel.isBusy)}"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/last_element_margin_bottom"
                android:paddingTop="@dimen/vertical_space_between_elements">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".LoginActivity"
                    >

                    <TextView
                        android:id="@+id/label_header"
                        style="@style/HeaderTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/label_login_hello"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:id="@+id/label_begin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_space_between_elements"
                        android:gravity="center"
                        android:maxLines="3"
                        android:paddingHorizontal="@dimen/long_text_padding"
                        android:text="@string/label_login_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_header" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_name"
                        style="@style/LayoutTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/safe_horizontal_margin"
                        android:layout_marginTop="@dimen/vertical_space_between_elements"
                        android:hint="@string/hint_login_user"
                        android:theme="@style/LayoutTextStyle"
                        app:layout_constraintTop_toBottomOf="@+id/label_begin"
                        app:errorEnabled="true"
                        app:error="@{viewModel.userNameError}"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_person"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.userName}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_password"
                        style="@style/LayoutTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/safe_horizontal_margin"
                        android:layout_marginTop="@dimen/vertical_space_between_elements"
                        android:hint="@string/hint_login_password"
                        android:theme="@style/LayoutTextStyle"
                        app:layout_constraintTop_toBottomOf="@+id/user_name"
                        app:passwordToggleDrawable="@drawable/custom_toggle_password"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/secondaryDarkGray"
                        app:errorEnabled="true"
                        app:error="@{viewModel.passwordError}"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionSend"
                            android:inputType="textPassword"
                            android:text="@={viewModel.password}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/safe_horizontal_margin"
                        android:text="@string/btn_login"
                        android:onClick="@{()-> viewModel.login()}"
                        app:layout_constraintTop_toBottomOf="@id/user_password">

                    </com.google.android.material.button.MaterialButton>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </RelativeLayout>
</layout>